--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "homepage": "https://github.com/gitHabbe/TmiChatBot#readme",
   "dependencies": {
     "tmi.js": "^1.8.3"
+  },
+  "devDependencies": {
+    "@types/tmi.js": "^1.7.1"
   }
 }
