--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Twitch chat bot developed in TypeScript",
   "main": "index.js",
   "scripts": {
+    "dev:build": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
