--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev:build": "tsc -w",
+    "dev:run": "nodemon build/index.js",
+    "dev": "concurrently npm:dev:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +35,8 @@
   },
   "devDependencies": {
     "@types/tmi.js": "^1.7.1",
+    "concurrently": "^6.2.0",
+    "nodemon": "^2.0.7",
     "typescript": "^4.3.2"
   }
 }
