--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/gitHabbe/TmiChatBot#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "tmi.js": "^1.8.3"
   },
   "devDependencies": {
