--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "fuse.js": "^6.4.6",
+    "lowdb": "^2.1.0",
     "tmi.js": "^1.8.3"
   },
   "devDependencies": {
