--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tmi.js": "^1.8.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.2",
     "@types/tmi.js": "^1.7.1",
     "concurrently": "^6.2.0",
