--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/gitHabbe/TmiChatBot#readme",
   "dependencies": {
+    "@prisma/client": "^2.27.0",
     "axios": "^0.21.1",
     "fuse.js": "^6.4.6",
     "tmi.js": "^1.8.3"
@@ -41,6 +42,10 @@
     "concurrently": "^6.2.0",
     "dotenv": "^10.0.0",
     "nodemon": "^2.0.7",
+    "prisma": "^2.27.0",
     "typescript": "^4.3.2"
+  },
+  "prisma": {
+    "schema": "src/prisma/schema.prisma"
   }
 }
