♻️Refactor: new prisma name and reset command

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev:build": "tsc -w",
     "dev:run": "nodemon build/index.js",
+    "dev:reset": "rm -rf src/prisma/migrations && npx prisma migrate reset -f",
     "dev": "concurrently npm:dev:*",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
