--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "nodemon": "^2.0.7",
     "prisma": "^2.27.0",
     "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "^4.3.2"
   },
   "prisma": {
