--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 
 services:
-  mysql:
+  mysql2:
     image: mysql:5.7
     ports:
       # <Port exposed> : < MySQL Port running inside container>
